Adding a few new blocks as hooks for inserting content before and after post content

--- a/src/NodePub/BlogEngine/Resources/views/post.twig
+++ b/src/NodePub/BlogEngine/Resources/views/post.twig
@@ -11,7 +11,9 @@
 
         {% block blog_post_content %}
             <div class="post_content">
+                {% block blog_post_before_content %}{% endblock %}
                 {{ post.content }}
+                {% block blog_post_after_content %}{% endblock %}
             </div>
         {% endblock %}
 
